min-width for navMenu, next button and alphabetical overlap fixed

--- a/portal/css/usergrid.less
+++ b/portal/css/usergrid.less
@@ -8,7 +8,7 @@
 @border2: #E5E5E5;
 @modalBar: #F2F2F2;
 @h3Color: #CCCCCC;
-@minScreenWidth: 750px;
+@minScreenWidth: 850px;
 //@fontMenu:
 
 
@@ -144,6 +144,9 @@ a:active {
 }
 
 //----------------- Navigation --------------------------------------------------------------------
+#sidebar-menu{
+    min-width: 120px;
+}
 .nav-list{
 	border-right:2px solid #F2F5F7;
 	& > li > a{
@@ -496,7 +499,7 @@ a:active {
 
 .console-section-contents.listContent{
     min-height: 700px;
-    //padding: 0px;
+    padding-right:70px;
     .alphabeticalFilter{
     position:absolute;
     right: 0;
@@ -675,11 +678,11 @@ a:active {
 }
 /*-----------------------------------------------*/
 .console-section{
-		min-width: 400px;
+		min-width: 200px;
 }
 #application-panel{
 	.console-section-contents > .row > div{
-	  	min-width: 400px;
+	  	min-width: 200px;
 	}
 }
 
